<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
   >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:menuCategory="secondary"
            android:title="@string/bbc" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/cnn"
            android:menuCategory="secondary"
            android:title="@string/cnn" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/fox"
            android:menuCategory="secondary"
            android:title="@string/fox" />
        <item
            android:id="@+id/republic_news_fragment"
            android:icon="@drawable/republic"
            android:menuCategory="secondary"
            android:title="@string/republic" />
    </group>

    <item
        android:title="Upcoming"
        android:menuCategory="secondary">
        <menu>
            <item
                android:title="@string/ny"
                android:icon="@drawable/ny"/>
        </menu>
    </item>
</menu>